# Meta-x-huggingface-hackathon

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  baseline_scores.json  graders.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: ci.yml
scripts/: pre_submit_validate.py  pre_submit_validate.sh
server/: app.py  graders.py
support_env/: __init__.py  env.py  graders.py  models.py  tasks.py
tests/: test_api_contract.py  test_env_core.py  test_graders.py
