[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "attention-economy-simulator"
version = "1.0.0"
description = "OpenEnv-compatible environment for balancing engagement, productivity, and wellbeing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Shikhar9000" }
]
dependencies = [
  "openenv-core>=0.2.0",
  "fastapi>=0.115.6,<1.0.0",
  "uvicorn[standard]>=0.32.1,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "openai>=2.7.2,<3.0.0",
  "requests>=2.32.3,<3.0.0"
]

[project.scripts]
server = "server.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
